tests/errors/types.vir
mod WordNoWidth {
    // CHECK: Word type requires a width parameter
    wire w0 : Word async


    // CHECK: Type Bit takes no parameters
    wire w1 : Bit[8] async


    // CHECK: Type Clock takes no parameters
    wire w2 : Clock[8]

    // CHECK: Type Reset takes no parameters
    wire w3 : Reset[2]
}
